added nav-bar styling

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <nav>
       <div class="nav-bar">
         <img id="kanban-logo" src="./assets/logo-light.svg">
-        <h4>ALL BOARDS (1)</h4>
-        <button>Launch Career</button>
+        <h4 id="nav-h4">ALL BOARDS (1)</h4>
+        <button id="career-btn">Launch Career</button>
       </div>
     </nav>
 
     <!-- Main Layout: Header with board title, add task button, and main content area for task columns. -->
     <div class="kanban-body">
       <header>
-        <div class="kanbar-header">
-          <h2>Launch Career</h2>
+        <div class="kanban-header">
+          <h2 id="career-h2">Launch Career</h2>
         </div>
       </header>
 
