finished the desktop css for the kanban board

--- a/index.html
+++ b/index.html
@@ -24,44 +24,44 @@
         </div>
       </header>
 
-      <div>
-        <main>
+      <div class="task-container">
+        <main class="task-cols">
           <!-- Task Columns: Display tasks grouped by status (TODO, DOING, DONE). -->
-          <div>
-            <div>
-              <span></span>
-              <h4>TODO</h4>
+          <div class="task-section">
+            <div class="task-heading">
+              <span id="todo-span"></span>
+              <h4 class="task-h4">TODO (4)</h4>
             </div>
             <!-- Tasks container for TODO -->
             <div>
-              <div>Launch Epic Career 🚀</div>
-              <div>Conquer React⚛️</div>
-              <div>Understand Databases⚙️</div>
-              <div>Crush Frameworks🖼️</div>
+              <div class="task-btn">Launch Epic Career 🚀</div>
+              <div class="task-btn">Conquer React⚛️</div>
+              <div class="task-btn">Understand Databases⚙️</div>
+              <div class="task-btn">Crush Frameworks🖼️</div>
             </div>
           </div>
           <!-- DOING Column -->
-          <div>
-            <div>
-              <span></span>
-              <h4>DOING</h4>
+          <div class="task-section">
+            <div class="task-heading">
+              <span id="doing-span"></span>
+              <h4 class="task-h4">DOING (2)</h4>
             </div>
             <!-- Tasks container for DOING -->
             <div>
-              <div>Master JavaScript 💛</div>
-              <div>Never Give Up🏆</div>
+              <div class="task-btn">Master JavaScript 💛</div>
+              <div class="task-btn">Never Give Up🏆</div>
             </div>
           </div>
           <!-- DONE Column -->
-          <div>
-            <div>
-              <span></span>
-              <h4>DONE</h4>
+          <div class="done-section">
+            <div class="task-heading">
+              <span id="done-span"></span>
+              <h4 class="task-h4">DONE (2)</h4>
             </div>
             <!-- Tasks container for DONE -->
             <div>
-              <div>Explore ES6 Features🚀</div>
-              <div>Have fun 🥳</div>
+              <div class="task-btn">Explore ES6 Features🚀</div>
+              <div class="task-btn">Have fun 🥳</div>
             </div>
           </div>
         </main>
