added alt text for image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Navigation Sidebar: Contains the logo, navigation links for boards, and theme toggle. -->
     <nav>
       <div class="nav-bar">
-        <img id="kanban-logo" src="./assets/logo-light.svg">
+        <img id="kanban-logo" src="./assets/logo-light.svg" alt="displaying the Kanban company logo">
         <h4 id="nav-h4">ALL BOARDS (1)</h4>
         <button id="career-btn">Launch Career</button>
       </div>
@@ -36,9 +36,9 @@
             <!-- Tasks container for TODO -->
             <div>
               <div class="task-btn">Launch Epic Career 🚀</div>
-              <div class="task-btn">Conquer React⚛️</div>
-              <div class="task-btn">Understand Databases⚙️</div>
-              <div class="task-btn">Crush Frameworks🖼️</div>
+              <div class="task-btn">Conquer React ⚛️</div>
+              <div class="task-btn">Understand Databases ⚙️</div>
+              <div class="task-btn">Crush Frameworks 🖼️</div>
             </div>
           </div>
           <!-- DOING Column -->
@@ -50,7 +50,7 @@
             <!-- Tasks container for DOING -->
             <div>
               <div class="task-btn">Master JavaScript 💛</div>
-              <div class="task-btn">Never Give Up🏆</div>
+              <div class="task-btn">Never Give Up 🏆</div>
             </div>
           </div>
           <!-- DONE Column -->
@@ -61,7 +61,7 @@
             </div>
             <!-- Tasks container for DONE -->
             <div>
-              <div class="task-btn">Explore ES6 Features🚀</div>
+              <div class="task-btn">Explore ES6 Features 🚀</div>
               <div class="task-btn">Have fun 🥳</div>
             </div>
           </div>
